add common options
